# rust-ecs-gol

./: .gitignore  build-debug.bat  build-run-debug.bat  build-run.bat  build.bat  live-edit-build-debug.bat  live-edit-build.bat
engine/: Cargo.toml
engine/src/: files.rs  graphics.rs  input.rs  lib.rs  sound.rs  threads.rs
engine/src/memory/: allocator.rs  bump.rs  dynamic.rs  locked.rs  mod.rs
game/: Cargo.toml
game/src/: lib.rs  math.rs
game/src/ecs/: archetypes.rs  components.rs  entities.rs  mod.rs  querying.rs  slicevec.rs
game/src/systems/: mod.rs
platform/: Cargo.toml
platform/src/: main.rs
platform/src/linux/: app.rs  io.rs  mod.rs
platform/src/win32/: app.rs  dynamic.rs  graphics.rs  input.rs  io.rs  memory.rs  mod.rs  services.rs  sound.rs  state.rs  timing.rs  windows.rs
